styles/globals.css
@import "tailwindcss/preflight";   /* resets & base styles */
@import "tailwindcss/utilities";    /* ALL of Tailwind’s utility classes */


html, body {
  overflow: hidden;
  overscroll-behavior: none;
}

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

